improve documentation, abstraction and method naming